--- a/index.html
+++ b/index.html
@@ -8,15 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/dark-mode.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="css/nav.css" rel="stylesheet">
     <script src="https://code.iconify.design/iconify-icon/2.1.0/iconify-icon.min.js"></script>
-    <script src="js/webver.js"></script>
     <!-- AOS PLUGIN -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/theme.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <style>
         .achievement-box {
             font-size: 1.25rem;
@@ -42,9 +40,12 @@
             opacity: 1;
         }
     </style>
+    <script src="js/navbar-shadow.js"></script>
 </head>
 
 <body>
+    <!-- Page Loader -->
+
     <nav class="navbar bg-light navbar-expand-lg sticky-top" id="NavBar">
         <div class="container-fluid">
             <a href="#"><img class="navbar-brand" id="light" width="100"></a>
@@ -128,44 +129,52 @@
                     <h5 class="fw-bold manrope text-center">begginer developer</h5>
                     <small class="fw-bold fira-code text-danger">*try to be a dev, cuz being a dev is really hard
                         af</small>
-
-                    <div class="text-center mt-2" data-aos="fade-in">
-                        <a href="https://instagram.com/muhfhri._" class="btn btn-outline-m3-you-color rounded-5"><i
-                                class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100044505125193"
-                            class="btn btn-outline-m3-you-color rounded-5"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="https://github.com/muhfhri" class="btn btn-outline-m3-you-color rounded-5"><i
-                                class="fa-brands fa-github"></i></a>
-                        <a href="https://www.tiktok.com/@flixpseal" class="btn btn-outline-m3-you-color rounded-5"><i
-                                class="fa-brands fa-tiktok" style="font-size: 22px;"></i></a>
-                        <a href="https://youtube.com/channel/UCzU0mlmLis0p2XOvRL1r0-Q"
-                            class="btn btn-outline-m3-you-color rounded-5"><i class="fa-brands fa-youtube"
-                                style="font-size: 20px"></i></a>
-                        <a href="https://twitter.com/flixpseal" class="btn btn-outline-m3-you-color rounded-5"><i
-                                class="fa-brands fa-twitter"></i></a>
-                    </div>
                 </div>
-                <div class="container mt-5 text-center" data-aos="fade-in">
-                    <h3><a class="fw-bold link-none clickable" href="#pendidikan" id="pendidikan">Who am i?</a></h3>
-                    <h4 class="fw-bold">I love programing like a android and website</h4>
-                    <sup><small class="fw-bold fira-code text-danger">*not really but i like it, why not?</small></sup>
+                    <a href="https://instagram.com/muhfhri._"
+                        class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=100044505125193"
+                        class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://github.com/muhfhri" class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://www.tiktok.com/@flixpseal"
+                        class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-tiktok"></i>
+                    </a>
+                    <a href="https://youtube.com/channel/UCzU0mlmLis0p2XOvRL1r0-Q"
+                        class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                    <a href="https://twitter.com/flixpseal" class="btn btn-m3-you-color shadow rounded-pill px-4 py-2 mt-2">
+                        <i class="fa-brands fa-x-twitter"></i>
+                    </a>
                 </div>
-                <div class="container mt-5 text-center">
-                    <h3 class="fw-bold">Achievements</h3>
-                    <div id="rotatingAchievement" class="achievement-box">🎓 Loading achievements...</div>
-                </div>
-                <div class="container mt-5" data-aos="fade-up">
-                    <h2 class="fw-bold text-center"><a href="#cool" id="cool" class="link-none clickable">Cool Stuff</a>
-                    </h2>
-                    <center><img id="light" alt="animasi_logo"></center>
-                    <div class="typing-container">
-                        <center>
-                            <h2 id="typing-effect"></h2>
-                        </center>
-                    </div>
+            </div>
+            <div class="container mt-5 text-center" data-aos="fade-in">
+                <h3><a class="fw-bold link-none clickable" href="#pendidikan" id="pendidikan">Who am i?</a></h3>
+                <h4 class="fw-bold">I love programing like a android and website</h4>
+                <sup><small class="fw-bold fira-code text-danger">*not really but i like it, why not?</small></sup>
+            </div>
+            <div class="container mt-5 text-center">
+                <h3 class="fw-bold">Achievements</h3>
+                <div id="rotatingAchievement" class="achievement-box">🎓 Loading achievements...</div>
+            </div>
+            <div class="container mt-5" data-aos="fade-up">
+                <h2 class="fw-bold text-center"><a href="#cool" id="cool" class="link-none clickable">Cool Stuff</a>
+                </h2>
+                <center><img id="light" alt="animasi_logo"></center>
+                <div class="typing-container">
+                    <center>
+                        <h2 id="typing-effect"></h2>
+                    </center>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <div id="website" class="page">
@@ -175,22 +184,22 @@
                     id="pendidikan">Framework & Code Editor</a></h3>
             <div class="container text-center">
                 <small class="manrope fw-bold">* All framework are Open-Source and free to use</small>
-                <h4 class="mt-3">Bootstrap 5 <sup class="manrope rounded-2 btn-outline-m3-you-color">&nbsp;<iconify-icon
+                <h4 class="mt-3">Bootstrap 5 <sup class="manrope rounded-2 btn-outline-m3">&nbsp;<iconify-icon
                             inline icon="carbon:fork"></iconify-icon>main&nbsp;</sup> <a href="https://getbootstrap.com"
-                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon inline
+                        class="btn btn-sm btn-outline-m3 rounded-5"><iconify-icon inline
                             icon="ri:bootstrap-fill"></iconify-icon></a></h4>
                 <h4>Iconify <sup class="manrope rounded-2 bg-warning">&nbsp;HTML | CSS&nbsp;</sup> <a
-                        href="https://iconify.com" class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon
+                        href="https://iconify.com" class="btn btn-sm btn-outline-m3 rounded-5"><iconify-icon
                             inline icon="line-md:iconify1"></iconify-icon></a></h4>
                 <h4>AOS Library <sup class="manrope rounded-2 bg-primary">&nbsp;CSS&nbsp;</sup> <a
                         href="https://michalsnik.github.io/aos/"
-                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon inline
+                        class="btn btn-sm btn-outline-m3 rounded-5"><iconify-icon inline
                             icon="pajamas:scroll-down"></iconify-icon></a></h4>
                 <h4>VS Code <a href="https://code.visualstudio.com/"
-                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon icon="uim:visual-studio"
+                        class="btn btn-sm btn-outline-m3 rounded-5"><iconify-icon icon="uim:visual-studio"
                             inline></iconify-icon></a></h4>
                 <h4>Acode <a href="https://play.google.com/store/apps/details?id=com.foxdebug.acode"
-                        class="btn btn-sm btn-outline-m3-you-color rounded-5"><iconify-icon icon="arcticons:acode"
+                        class="btn btn-sm btn-outline-m3 rounded-5"><iconify-icon icon="arcticons:acode"
                             inline></iconify-icon></a></h4>
 
                 <a class="btn btn-outline-dark rounded-5 geist-mono position-relative" data-bs-toggle="collapse"
@@ -258,9 +267,8 @@
             </p>
             <h4 class="fw-bold">Projek <iconify-icon inline icon="simple-icons:polymerproject"></iconify-icon></h4>
             <p>
-                <a href="tije.html" class="rounded-5 link-none animasi">Tije</a> |
-                <a href="https://flixdz.github.io/flixpseal/project/" class="rounded-5 link-none animasi">Project
-                    Review</a></h5>
+                <a href="tije.html" class="rounded-5 link-none animasi">Transjakarta</a> |
+                <a href="https://flixdz.github.io/minecraft" class="rounded-5 link-none animasi">Material 3 Web</a></h5>
             </p>
         </div>
     </div>
@@ -296,68 +304,7 @@
     </script>
 
     <!-- Footer Start -->
-    <footer class="p-2" id="footer">
-        <div class="container mb-2 text-center">
-            <a href="https://instagram.com/muhfhri._" id="footer-icon"
-                class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i
-                    class="fa-brands fa-instagram"></i></a>
-            <a href="https://github.com/Flixdz" id="footer-icon" class="btn btn-outline-dark rounded-5 btn-floating m-1"
-                role="button"><i class="fa-brands fa-github"></i></a>
-            <a href="https://www.tiktok.com/@flixpseal" id="footer-icon"
-                class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><i
-                    class="fa-brands fa-tiktok"></i></a>
-            <a href="https://discordapp.com/users/899644068697620491" id="footer-icon"
-                class="btn btn-outline-dark rounded-5 btn-floating m-1" role="button"><iconify-icon inline
-                    icon="ic:baseline-discord"></iconify-icon></a>
-        </div>
-        <div class="container small text-center">
-            <div class="row">
-                <div class="col-md-4">
-                    <font class="h5 fw-bold">Projects</font>
-                    <br><a href="tije" class="link-none">Transjakarta Route</a>
-                    <br>
-                    <font class="text-muted">For more project visit my GitHub</font>
-                    <br><a href="https://github.com/muhfhri" class="link-none">Muhfhri GitHub</a>
-                </div>
-                <div class="col-md-4">
-                    <br><br>
-                    <blockquote class="h5 text-muted" style="font-family: poppins"><iconify-icon
-                            icon="mingcute:quote-left-fill"></iconify-icon>
-                        <script language="JavaScript">
-
-                            var r_text = new Array();
-                            r_text[0] = "Keep Calm and Stay Focused!";
-                            r_text[1] = "Flixdz To The Top!";
-                            r_text[2] = "I'll depend on you...";
-                            r_text[3] = "Using Material 3 You design";
-                            r_text[4] = "Google Sans";
-                            r_text[5] = "It's not living (If it's not with you)";
-                            r_text[6] = "Muhfhri On Top!";;
-                            var i = Math.floor(7 * Math.random())
-
-                            document.write(r_text[i]);
-
-                            //-->
-                        </script><iconify-icon icon="mingcute:quote-right-fill"></iconify-icon>
-                    </blockquote>
-                    <br><br>
-                </div>
-                <div class="col-md-4">
-                    <font class="h5 fw-bold">Framework</font>
-                    <br>Iconify
-                    <br>Font Awesome
-                    <br>Bootstrap 5
-                    <br><a href="https://github.com/muhfhri/-" class="text-muted link-none">More...</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <div class="text-center small p-3" id="copy"><span id="version"></span>
-        <br><span id="lastupt"></span>
-        <br>Theme by <img src="image/animation.gif" width="30">, Made with <i class="fa fa-heart"
-            style="color: red"></i>
-        for you
-    </div>
+    <div id="footer"></div>
     <!-- Footer End -->
 
     <!-- Tombol ke atas -->
@@ -408,7 +355,7 @@
         ];
 
         const typingSpeed = 100;
-        const delay = 1500; 
+        const delay = 1500;
 
         const typingElement = document.getElementById("typing-effect");
 
@@ -479,10 +426,11 @@
         });
     </script>
     <script src="js/button_top.js"></script>
-    <script src="js/webver.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/weather.js"></script>
     <script src="js/dark-mode-switch.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/progress.js"></script>
 </body>
 
 </html>
