--- a/tije.html
+++ b/tije.html
@@ -214,6 +214,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.2/iconify-icon.min.js"></script>
     <script src="js/dark-mode-switch.js"></script>
+    <script src="js/progress.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             const taglines = document.querySelectorAll('.text-slider h2');
