--- a/tije.html
+++ b/tije.html
@@ -193,33 +193,47 @@
         <style>
 
         </style>
-        <script>
-        (function() {
-          const texts = [
-            "Transjakarta",
-            "MetroTrans",
-            "MiniTrans",
-            "MikroTrans",
-            "Bus Wisata",
-            "Royal Trans"
-          ];
-          let idx = 0;
-          const el = document.getElementById('serviceTextSlider');
-          function slideToNext() {
-            el.style.transform = 'translateX(120%)';
-            setTimeout(() => {
-              idx = (idx + 1) % texts.length;
-              el.textContent = texts[idx];
-              el.style.transition = 'none';
-              el.style.transform = 'translateX(-120%)';
-              void el.offsetWidth;
-              el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1)';
-              el.style.transform = 'translateX(0)';
-            }, 400);
-          }
-          setInterval(slideToNext, 5000);
-        })();
-        </script>
+        <!-- Ganti script serviceTextSlider dengan yang lebih halus -->
+<script>
+(function() {
+  const texts = [
+    "Transjakarta",
+    "MetroTrans",
+    "MiniTrans",
+    "MikroTrans",
+    "Bus Wisata",
+    "Royal Trans",
+    "24 Jam Koridor Utama",
+  ];
+  let idx = 0;
+  const el = document.getElementById('serviceTextSlider');
+  // Pastikan style awal
+  el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1), opacity 0.4s';
+  el.style.opacity = 1;
+  el.style.transform = 'translateX(0)';
+
+  function slideToNext() {
+    // Fade out & slide ke kanan
+    el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1), opacity 0.4s';
+    el.style.opacity = 0;
+    el.style.transform = 'translateX(80%)';
+    setTimeout(() => {
+      idx = (idx + 1) % texts.length;
+      el.textContent = texts[idx];
+      // Reset ke kiri & invisible
+      el.style.transition = 'none';
+      el.style.transform = 'translateX(-80%)';
+      el.style.opacity = 0;
+      void el.offsetWidth; // force reflow
+      // Fade in & slide ke tengah
+      el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1), opacity 0.4s';
+      el.style.opacity = 1;
+      el.style.transform = 'translateX(0)';
+    }, 400);
+  }
+  setInterval(slideToNext, 5000);
+})();
+</script>
 
         <div class="d-flex align-items-center justify-content-center gap-2 mb-2">
             <span id="liveClock" class="fw-bold" style="min-width:70px"></span>
