--- a/tije.html
+++ b/tije.html
@@ -17,6 +17,7 @@
         body {
             font-family: 'PT Sans Narrow', sans-serif;
             background-color: #f8f9fa;
+            letter-spacing: 0.6px;
         }
         
         .badge {
@@ -25,9 +26,11 @@
         
         .plus-jakarta-sans {
             font-family: 'Plus Jakarta Sans', sans-serif !important;
+            letter-spacing: 0px;
         }
         .pt-sans {
             font-family: 'PT Sans Narrow', sans-serif;
+            letter-spacing: 0.6px;
         }
 
         .bg-2 {
@@ -219,16 +222,17 @@
     el.style.transform = 'translateX(80%)';
     setTimeout(() => {
       idx = (idx + 1) % texts.length;
+      // Setelah animasi keluar selesai, ganti text dan reset posisi (invisible)
       el.textContent = texts[idx];
-      // Reset ke kiri & invisible
       el.style.transition = 'none';
       el.style.transform = 'translateX(-80%)';
       el.style.opacity = 0;
-      void el.offsetWidth; // force reflow
-      // Fade in & slide ke tengah
-      el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1), opacity 0.4s';
-      el.style.opacity = 1;
-      el.style.transform = 'translateX(0)';
+      // Gunakan requestAnimationFrame untuk memastikan reflow sebelum animasi masuk
+      requestAnimationFrame(() => {
+        el.style.transition = 'transform 0.5s cubic-bezier(.77,0,.18,1), opacity 0.4s';
+        el.style.opacity = 1;
+        el.style.transform = 'translateX(0)';
+      });
     }, 400);
   }
   setInterval(slideToNext, 5000);
@@ -491,7 +495,7 @@ document.addEventListener("DOMContentLoaded", function() {
     </div>`,
     `<div class="alert alert-warning alert-dismissible fade show py-2 small mb-2" style="font-size:0.95em;" role="alert">
       <b>⚡ Bus Listrik!</b>
-      <br>Transjakarta kini juga mengoperasikan bus listrik ramah lingkungan di beberapa koridor. Koridor yang memiliki Bus Listrik yaitu 1,2,4,6,8,9,10,12, dan 14. Atau kamu bisa melihat di website ini di jenis bus yang tersedia badge Listrik ⚡
+      <br>Transjakarta kini juga mengoperasikan bus listrik ramah lingkungan di beberapa koridor maupun di non-koridor!.
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Tutup"></button>
     </div>`
     // Tambahkan info lain sesuai keinginan
