--- a/android.html
+++ b/android.html
@@ -154,6 +154,8 @@
                 <div id="weather">
                     <i id="weather-icon" class=""></i> <!-- Ikon cuaca -->
                     <span id="weather-info">Cerah, 26°C</span> <!-- Informasi cuaca -->
+                    <button id="weather-edit-btn" class="btn btn-link btn-sm p-0 ms-1" style="vertical-align:middle; font-size:1em;" title="Edit lokasi"><i class="fa-regular fa-pen-to-square"></i></button>
+                    <span id="weather-edit-box" style="display:none;"></span>
                 </div>
             </div>
         </div>
@@ -174,14 +176,14 @@
                 <center>
                     <div class="card w-75 card-body rounded-5 mt-2">
                         <center><img
-                                src="https://images-cdn.ubuy.co.id/6351ac4f756a6050cf4cc623-poco-f3-5g-4g-volte-unlocked-global.jpg"
+                                src="https://rukminim2.flixcart.com/image/704/844/xif0q/mobile/e/7/c/f5-5g-mzb0e7lin-poco-original-imagpep3w5zmcdcd.jpeg?q=20&crop=false"
                                 width="100px" alt="" class="rounded-3"></center>
-                        <h2 class="fw-bold">POCO F3</h2>
-                        <h5 class="google-sans">Snapdragon 870 5G</h5>
-                        <h5>4520mAh</h5>
-                        <h5 class="manrope">128 GB / 6 GB</h5>
-                        <h5>UFS 3.1 / LPDDR5 2700mhz</h5>
-                        <h5>AnTuTu 920.000</h5>
+                        <h2 class="fw-bold">POCO F5</h2>
+                        <h5 class="google-sans">Snapdragon 7+ Gen 2</h5>
+                        <h5>5000mAh</h5>
+                        <h5 class="manrope">256 GB / 12 GB</h5>
+                        <h5>UFS 3.1 / LPDDR5 3200mhz</h5>
+                        <h5>AnTuTu 1.100.000</h5>
                     </div>
                 </center>
             </div>
