--- a/windows.html
+++ b/windows.html
@@ -160,6 +160,8 @@
         <div id="weather">
           <i id="weather-icon" class=""></i> <!-- Ikon cuaca -->
           <span id="weather-info">Cerah, 26°C</span> <!-- Informasi cuaca -->
+          <button id="weather-edit-btn" class="btn btn-link btn-sm p-0 ms-1" style="vertical-align:middle; font-size:1em;" title="Edit lokasi"><i class="fa-regular fa-pen-to-square"></i></button>
+          <span id="weather-edit-box" style="display:none;"></span>
         </div>
       </div>
     </div>
@@ -208,93 +210,6 @@
   <!-- JavaScript for functional features this cool website-->
 
   <script>
-    const apiKey = '962322a87800402e0b9d7052cb5e8f16';
-    const city = 'Jakarta'; // Ubah kota sesuai yang Anda inginkan
-    const apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&lang=id&appid=${apiKey}`;
-
-    fetch(apiUrl)
-      .then(response => response.json())
-      .then(data => {
-        const weatherDescription = data.weather[0].description.toLowerCase();
-        const temperature = data.main.temp;
-        // Update ikon cuaca berdasarkan kondisi cuaca
-        const weatherIcon = document.getElementById('weather-icon');
-        if (weatherDescription.includes('hujan')) {
-          weatherIcon.className = 'fas fa-cloud-showers-heavy'; // Ikutin kondisi hujan
-        } else if (weatherDescription.includes('awan') || weatherDescription.includes('halimun')) {
-          weatherIcon.className = 'fas fa-cloud'; // Ikutin kondisi mendung/berawan
-        } else if (weatherDescription.includes('petir')) {
-          weatherIcon.className = 'fas fa-thunderstorm'; // Ikutin kondisi petir
-        }
-        else if (weatherDescription.includes('badai')) {
-          weatherIcon.className = 'fa-solid fa-tornado'; // Ikutin badai
-        }
-        else if (weatherDescription.includes('kabut')) {
-          weatherIcon.className = 'fa-solid fa-wind'; // Ikutin badai
-        }
-        else {
-          weatherIcon.className = 'fas fa-sun'; // Ikutin kondisi cerah
-        }
-        // Konversi deskripsi cuaca ke dalam huruf kapital
-        const capitalizedWeatherDescription = weatherDescription.charAt(0).toUpperCase() + weatherDescription.slice(1);
-        // Update informasi cuaca dengan deskripsi cuaca, suhu, dan nama kota
-        document.getElementById('weather-info').textContent = `${capitalizedWeatherDescription} | ${city} | ${temperature}°C`;
-      })
-      .catch(error => {
-        console.error('Error fetching weather data:', error);
-        document.getElementById('weather').textContent = 'Tidak dapat mengambil data cuaca.';
-      });
-  </script>
-
-  <script>
-    $(document).ready(function () {
-      var savedName = localStorage.getItem("userName");
-      if (savedName) {
-        greetUser(savedName);
-      } else {
-        $("#myModal").modal('show');
-      }
-    });
-
-    function greetUser(name) {
-      var myDate = new Date();
-      var hrs = myDate.getHours();
-
-      var greet;
-
-      if (hrs < 3)
-        greet = 'Selamat Malam';
-      else if (hrs >= 3 && hrs <= 10)
-        greet = 'Selamat Pagi';
-      else if (hrs >= 10 && hrs <= 15)
-        greet = 'Selamat Siang';
-      else if (hrs >= 15 && hrs <= 20)
-        greet = 'Selamat Sore';
-      else if (hrs >= 20 && hrs <= 24)
-        greet = 'Selamat Malam';
-
-      if (name.toLowerCase().includes("aina") || name.toLowerCase().includes("ida") || name.toLowerCase().includes("embul") || name.toLowerCase().includes("yasa") | name.toLowerCase().includes("mamat")) {
-        name = "Sayanggg ^•^ ";
-      }
-
-      document.getElementById('lblGreetings').innerHTML =
-        greet + ' ' + name + '!<button class="btn btn-sm btn-link" onclick="changeName()"><small><sup><i class="fa-regular fa-pen-to-square"></i></sup></small></button>';
-    }
-
-    function saveName() {
-      var name = document.getElementById("name").value;
-      localStorage.setItem("userName", name);
-      $("#myModal").modal('hide');
-      greetUser(name);
-    }
-
-    function changeName() {
-      localStorage.removeItem("userName");
-      $("#myModal").modal('show');
-    }
-  </script>
-
-  <script>
     // fungsi satuaku adalah membuat angka 0 menjadi 00
     var satuaku = n => {
       return ('0' + n).slice(-2);
@@ -324,6 +239,7 @@
   <script src="js/dark-mode-switch.js"></script>
   <script src="js/multilevel.js"></script>
   <script src="js/footer.js"></script>
+  <script src="js/weather.js"></script>
   <!-- End Script -->
 
 </body>
