--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                 </div>
             </div>
             <div class="container mt-5 text-center" data-aos="fade-in">
-                <img src="image/muhfhri.png" width="100px" class="rounded-circle alt="">
-                <h3 class="fw-bold" data-i18n="whoami_title">Tentang Saya</h3>
+                <img src="image/muhfhri.png" width="100px" class="rounded-circle alt="muhfhri photo">
+                <h3 class="fw-bold mt-4" data-i18n="whoami_title">Tentang Saya</h3>
                 <p class="google-sans-mono" data-i18n="whoami_desc">
 Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Software, Website ataupun Android sudah menjadi kesukaan saya sejak lama.<br>
 <span class="geist-mono">Alumni SMK Nurul Islam Jakarta ke-35 Jurusan Rekayasa Perangkat Lunak</span>
