--- a/varphp.html
+++ b/varphp.html
@@ -35,9 +35,9 @@
    <nav class="navbar bg-light navbar-expand-lg sticky-top" id="NavBar">
         <div class="container-fluid">
             <a href="#"><img class="navbar-brand" id="light" width="100"></a>
-            <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler collapsed border-0 shadow-none" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+                aria-label="Toggle navigation" style="box-shadow:none; outline:none;">
                 <span class="icon-bar top-bar"></span>
                 <span class="icon-bar middle-bar"></span>
                 <span class="icon-bar bottom-bar"></span>
