--- a/index.html
+++ b/index.html
@@ -440,6 +440,15 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
 #settings-btn .fa-gear.spin {
   animation: spin-gear 1s linear infinite;
 }
+/**** Animasi hover untuk Bahasa & Framework ****/
+#skills .p-3.rounded-4.shadow-sm {
+  transition: transform 0.18s cubic-bezier(.4,1.5,.5,1), box-shadow 0.18s cubic-bezier(.4,1.5,.5,1);
+}
+#skills .p-3.rounded-4.shadow-sm:hover {
+  transform: scale(1.07) translateY(-4px);
+  box-shadow: 0 8px 32px rgba(0,0,0,0.13), 0 1.5px 6px rgba(0,0,0,0.10);
+  z-index:2;
+}
 </style>
 
     <!-- Footer Start -->
@@ -507,6 +516,8 @@ document.getElementById('increase-text2').onclick = () => setTextSize2(Math.min(
 document.getElementById('decrease-text2').onclick = () => setTextSize2(Math.max(currentSize2 - 10, 70));
 document.getElementById('reset-text2').onclick = () => setTextSize2(100);
 if (currentSize2) setTextSize2(currentSize2);
+// Pastikan bahasa tersimpan selalu diterapkan
+setLanguage(localStorage.getItem('lang') || 'en');
 </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
