--- a/index.html
+++ b/index.html
@@ -153,6 +153,41 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
     <sup><small class="fw-bold fira-code text-danger" data-i18n="whoami_note">*sebenernya kurang suka karna kompleks, tapi kenapa enggak?</small></sup>
   </div>
 </div>
+            <!-- Timeline Pendidikan Start -->
+<section id="timeline-pendidikan" class="timeline-section" data-aos="fade-in">
+  <h2 class="text-center fw-bold" data-i18n="pendidikan_title">Pendidikan</h2>
+  <div class="timeline timeline-center">
+    <div class="timeline-step">
+      <div class="timeline-dot-year">
+        <span class="timeline-dot"></span>
+        <span class="timeline-year-badge">2014–2017</span>
+      </div>
+      <div class="timeline-content timeline-content-center">SDN Bintara Jaya 03</div>
+    </div>
+    <div class="timeline-step">
+      <div class="timeline-dot-year">
+        <span class="timeline-dot"></span>
+        <span class="timeline-year-badge">2017–2019</span>
+      </div>
+      <div class="timeline-content timeline-content-center">SDN Pondok Kopi 03</div>
+    </div>
+    <div class="timeline-step">
+      <div class="timeline-dot-year">
+        <span class="timeline-dot"></span>
+        <span class="timeline-year-badge">2019–2022</span>
+      </div>
+      <div class="timeline-content timeline-content-center">SMPN 156 Jakarta</div>
+    </div>
+    <div class="timeline-step">
+      <div class="timeline-dot-year">
+        <span class="timeline-dot"></span>
+        <span class="timeline-year-badge">2022–2025</span>
+      </div>
+      <div class="timeline-content timeline-content-center">SMKS Nurul Islam Jakarta</div>
+    </div>
+  </div>
+</section>
+<!-- Timeline Pendidikan End -->
             <!-- YouTube Channel Section Start -->
             <div class="container mt-4 mb-4 p-3 text-center" id="yt-channel-section" style="max-width:420px;border-radius:1.5rem;box-shadow:none;background:none;position:relative;overflow:hidden;" data-aos="fade-in">
                 <i class="fa-brands fa-youtube" style="position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);font-size:180px;color:#ff0000;opacity:0.08;z-index:0;pointer-events:none;"></i>
