--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@ Saya adalah seseorang yang sangat tertarik dengan dunia teknologi terutama Softw
             </p>
             <h4 class="fw-bold">Projek <iconify-icon inline icon="simple-icons:polymerproject"></iconify-icon></h4>
             <p>
-                <a href="https://muhfhri.github.io/tj" class="rounded-5 link-none animasi" data-i18n="tj">Transjakarta</a> |
+                <a href="https://muhfhri.github.io/jakmove" class="rounded-5 link-none animasi" data-i18n="tj">Transjakarta</a> |
                 <a href="https://flixdz.github.io/minecraft" class="rounded-5 link-none animasi" data-i18n="material3">Material 3 Web</a></h5>
             </p>
         </div>
