--- a/others.html
+++ b/others.html
@@ -8,6 +8,19 @@
   <meta name="description" content="Website Muhammad Fachri Al Husein, dibuat menggunakan GitHub Pages">
   <title>Others</title>
   <link rel="icon" type="image/png" href="image/flixdz_top.png">
+  <!-- Prevent theme flash (set theme before CSS paints) -->
+  <script>
+    (function(){
+      try {
+        var t = localStorage.getItem('theme') || 'light';
+        if (t !== 'dark' && t !== 'light') t = 'light';
+        document.documentElement.setAttribute('data-theme', t);
+        var s = document.createElement('style');
+        s.textContent = t === 'dark' ? 'html{background:#131318;color:#E6E0E9;}' : 'html{background:#FFFBFE;color:#1C1B1F;}';
+        document.head.appendChild(s);
+      } catch(e) {}
+    })();
+  </script>
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
