--- a/android.html
+++ b/android.html
@@ -409,7 +409,7 @@
                                 <a href="https://github.com/sidex15/susfs4ksu-module/releases/" class="btn btn-outline btn-sm">SUSFS</a>
                             </div>
                             <div class="flex flex-wrap gap-2">
-                                <a href="https://github.com/chiteroman/PlayIntegrityFix/releases/" class="btn btn-outline btn-sm">ReVanced</a>
+                                <a href="https://github.com/j-hc/revanced-magisk-module/releases" class="btn btn-outline btn-sm">ReVanced</a>
                                 <a href="https://github.com/5ec1cff/TrickyStore/releases/" class="btn btn-outline btn-sm">TrickyStore</a>
                             </div>
                         </div>
@@ -473,7 +473,7 @@
                         </div>
                         <h3 class="font-bold text-lg mb-2">InnerTune</h3>
                         <p class="text-sm opacity-70 mb-3">YouTube Music client</p>
-                        <div class="badge badge-warning badge-sm">Beta</div>
+                        <div class="badge badge-warning badge-sm">Discontinued</div>
                     </div>
                 </a>
                 
@@ -501,7 +501,7 @@
                     </div>
                 </a>
                 
-                <a href="https://github.com/chiteroman/PlayIntegrityFix/releases/" 
+                <a href="https://github.com/j-hc/revanced-magisk-module/releases/" 
                    class="card bg-base-100 border border-base-300 shadow-sm hover:shadow-md smooth-transition card-hover">
                     <div class="card-body text-center p-6">
                         <div class="w-12 h-12 bg-orange-100 dark:bg-orange-900/30 rounded-full flex items-center justify-center mx-auto mb-4">
