--- a/basic.html
+++ b/basic.html
@@ -7,9 +7,9 @@
     
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/prism.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700;800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Google+Sans+Flex:opsz,wght@6..144,1..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     
     <style>/* =======================================================
@@ -885,7 +885,7 @@ slider.addEventListener("input", () => {
 
             <div class="credit-chip" title="Typography">
                 <span class="material-symbols-rounded">text_fields</span>
-                <span>Plus Jakarta Sans</span>
+                <span>Google Sans Flex</span>
             </div>
 
         </div>
